[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bloodhound-opengraph"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A Python library for creating BloodHound OpenGraph JSON data"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/rookuu/bloodhound-opengraph"
Documentation = "https://github.com/rookuu/bloodhound-opengraph/blob/main/README.md"
Repository = "https://github.com/rookuu/bloodhound-opengraph"
"Bug Tracker" = "https://github.com/rookuu/bloodhound-opengraph/issues"